# notes_app_rust

./: Cargo.toml  README.md
src/: handlers.rs  main.rs  models.rs  routes.rs
src/static/css/: style.css
src/static/js/: script.js
src/templates/: create.html  edit.html  index.html  read.html  search.html
