[package]
name = "notess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
chrono = "0.4.19"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"
actix-web = "4.0.0"
