[package]
name = "notess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
hmac = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"
actix-web = "4.0.0"
